examples/test/testpolicy11509.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11509
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key2: value45
      key42: value22
      key21: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value14
      podSelector:
        matchLabels:
          key12: value30
          key40: value40
          key44: value16
